Collect stack traces using arthas